Clear some lint warnings